<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.Quiz">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/correct_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:paddingVertical="@dimen/_18sdp"
        android:text="@string/you_got_it_right"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:alpha="0.8"
        android:visibility="gone"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        android:elevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/_4sdp"
        app:layout_constraintBottom_toTopOf="@+id/check_ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.screens.Quiz">

            <androidx.cardview.widget.CardView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/radio_button_unselect_bg"
                app:cardCornerRadius="@dimen/_4sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_margin="@dimen/_4sdp"
                        app:srcCompat="@drawable/ic_baseline_chevron_left_24"
                        android:contentDescription="@string/back" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/header_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/gravitation"
                android:textColor="@color/blackish"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="@+id/back" />

            <TextView
                android:id="@+id/question_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/grayish"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back"
                tools:text="Q1 (Single Correct)" />

            <katex.hourglass.in.mathlib.MathView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/question_number"
                app:layout_constraintTop_toBottomOf="@+id/question_number"
                tools:text="What do you understand by ..." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/prevYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16sdp"
                android:background="@drawable/bg_prev_year_chip"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/question"
                app:layout_constraintTop_toBottomOf="@id/question"
                tools:text="JEE Main 2020" />

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prevYear" />

            <TextView
                android:id="@+id/solutionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:text="@string/solution"
                android:textColor="@color/grayish"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGrp" />

            <katex.hourglass.in.mathlib.MathView
                android:id="@+id/solution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginVertical="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/solutionTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/check_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/_16ssp"
        android:textColor="#ADAFBB"
        android:enabled="false"
        android:elevation="@dimen/_8sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:background="@drawable/btn_selector"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="@dimen/_16sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>


